fix: removed jar hardcoded version
fix: addressed deprecated warning for Integer